--- a/packages/inbox/package.json
+++ b/packages/inbox/package.json
@@ -2,7 +2,7 @@
   "name":"inbox",
   "description":"Sending and recieving messages across multiple projects.",
   "version":"1.0.0",
-  "build":"window",
+  "build":"scoped",
   "author":"IMF",
   "keywords":["inbox","message","send","recieve","load"],
   "dependencies":[],
